# mcp_graph

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py  cli.py  graph_builder.py  mcp_client.py  prompt.py
src/tools/: mcp_image_server.py
